Integrated the validator messages with viewer